Adicionei estilização para o Quiz e tambem adicionei o resultado do Quiz

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 /* Cores e estilos globais */
 :root {
-    --primary-color: #27374D;
+    --primary-color: #27374d;
     --secondary-color: #F9F7F7;
     --text-color: #fff;
     --shadow-color: rgba(0, 0, 0, 0.5);
